--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     rev: 21.11b1
     hooks:
       - id: black
+        args: [-t, py310]
   - repo: https://github.com/pycqa/isort
     rev: 5.8.0
     hooks:
