--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 anyio==3.3.4
 asgiref==3.4.1
 backports.entry-points-selectable==1.1.1
+bcrypt==3.2.0
 black==21.11b1
 boto3==1.20.5
 botocore==1.23.5
+cffi==1.15.0
 cfgv==3.3.1
 click==8.0.3
 databases==0.5.3
 distlib==0.3.3
+dnspython==2.1.0
+ecdsa==0.17.0
+email-validator==1.1.3
 fastapi==0.70.0
 ffmpeg-python==0.2.0
 filelock==3.3.2
@@ -23,16 +28,22 @@ mypy==0.910
 mypy-extensions==0.4.3
 nodeenv==1.6.0
 pamqp==2.3.0
+passlib==1.7.4
 pathspec==0.9.0
 platformdirs==2.4.0
 pre-commit==2.15.0
 psycopg2==2.9.2
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.8.2
 python-dateutil==2.8.2
 python-dotenv==0.19.2
+python-jose==3.3.0
+python-multipart==0.0.5
 pytube==11.0.1
 PyYAML==6.0
 regex==2021.11.10
+rsa==4.8
 s3transfer==0.5.0
 six==1.16.0
 sniffio==1.2.0
@@ -49,7 +60,3 @@ virtualenv==20.10.0
 watchgod==0.7
 websockets==10.1
 yarl==1.7.2
-python-multipart
-passlib[bcrypt]
-python-jose[bcrypt]
-pydantic[email]
