--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,10 +13,11 @@ repos:
       - id: black
         args: [-t, py310]
   - repo: https://github.com/pycqa/isort
-    rev: 5.8.0
+    rev: 5.10.1
     hooks:
       - id: isort
         name: isort (python)
+        args: ["--profile", "black"]
       - id: isort
         name: isort (cython)
         types: [cython]
