--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-jose==3.3.0
 python-multipart==0.0.5
-pytube==11.0.2
+pytube>=12.1.0
 PyYAML==6.0
 regex==2021.11.10
 rsa==4.8
